--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "@slidev/cli": "latest",
     "@slidev/theme-default": "latest",
-    "@slidev/theme-seriph": "latest",
-    "@slidev/theme-apple": "latest"
+    "@slidev/theme-seriph": "latest"
   }
 }
