--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "@slidev/cli": "latest",
     "@slidev/theme-bricks": "^0.25.0",
     "@slidev/theme-default": "latest",
-    "@slidev/theme-seriph": "latest"
+    "@slidev/theme-seriph": "^0.25.0"
   }
 }
